fixed overflow

--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@ main {
     background-position: center;
     background-repeat: no-repeat;
     min-height: 100vh;
+    overflow: auto;
 }
 
 h1 {
@@ -184,6 +185,10 @@ footer ul {
     
     section ul li img {
         height: 400px;
+    }
+
+    nav ul li {
+        font-size: 15px;
     }
 }
 
